WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198563
[JSCOnly] JSCOnly port is not building on macOS
https://bugs.webkit.org/show_bug.cgi?id=198563
Summary
[JSCOnly] JSCOnly port is not building on macOS
Caio Lima
Reported
2019-06-05 05:49:55 PDT
After
https://trac.webkit.org/changeset/245492
, build JSCOnly port on mac results in the following build error: ``` CMake Error at Source/cmake/OptionsJSCOnly.cmake:102 (include): include could not find load file: target/icu.cmake Call Stack (most recent call first): Source/cmake/WebKitCommon.cmake:56 (include) CMakeLists.txt:168 (include) -- Platform-specific CMakeLists not found: /Source/webkit/Source/bmalloc/PlatformJSCOnly.cmake -- Using platform-specific CMakeLists: /Source/webkit/Source/WTF/wtf/PlatformJSCOnly.cmake CMake Error at Source/WTF/CMakeLists.txt:10 (file): file COPY given no DESTINATION ```
Attachments
Patch
(1.05 KB, patch)
2019-06-05 16:01 PDT
,
Caio Lima
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Don Olmstead
Comment 1
2019-06-05 14:13:25 PDT
Maybe fixed in
https://bugs.webkit.org/show_bug.cgi?id=197132
?
Caio Lima
Comment 2
2019-06-05 15:44:27 PDT
(In reply to Don Olmstead from
comment #1
)
> Maybe fixed in
https://bugs.webkit.org/show_bug.cgi?id=197132
?
It does, indeed. Thx! I just found another issue but I have a patch already.
Caio Lima
Comment 3
2019-06-05 16:01:10 PDT
Created
attachment 371444
[details]
Patch
Caio Lima
Comment 4
2019-06-05 16:03:04 PDT
Current failure is: ``` FAILED: Source/WTF/wtf/CMakeFiles/WTF.dir/WTFAssertions.cpp.o /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/c++ -DBUILDING_JSCONLY__ -DBUILDING_WITH_CMAKE=1 -DBUILDING_WTF -DHAVE_CONFIG_H=1 -DU_DISABLE_RENAMING=1 -DU_SHOW_CPLUSPLUS_API=0 -I. -IDerivedSources -I../../Source/ThirdParty -IDerivedSources/WTF -I../../Source/WTF -I../../Source/WTF/wtf -I../../Source/WTF/wtf/dtoa -I../../Source/WTF/wtf/persistence -I../../Source/WTF/wtf/text -I../../Source/WTF/wtf/text/icu -I../../Source/WTF/wtf/threads -I../../Source/WTF/wtf/unicode -IDerivedSources/ForwardingHeaders -isystem ICU/Headers -fdiagnostics-color=always -fcolor-diagnostics -Wextra -Wall -Wno-parentheses-equality -Wno-noexcept-type -Qunused-arguments -Wwrite-strings -Wundef -Wpointer-arith -Wmissing-format-attribute -Wformat-security -Wcast-align -fno-strict-aliasing -fno-exceptions -fno-rtti -std=c++17 -O3 -DNDEBUG -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.14.sdk -fPIC -MD -MT Source/WTF/wtf/CMakeFiles/WTF.dir/WTFAssertions.cpp.o -MF Source/WTF/wtf/CMakeFiles/WTF.dir/WTFAssertions.cpp.o.d -o Source/WTF/wtf/CMakeFiles/WTF.dir/WTFAssertions.cpp.o -c ../../Source/WTF/wtf/WTFAssertions.cpp ../../Source/WTF/wtf/WTFAssertions.cpp:52:15: error: use of undeclared identifier 'mach_vm_offset_t' static_assert(MACH_VM_MAX_ADDRESS <= ((1ULL << WTF_CPU_EFFECTIVE_ADDRESS_WIDTH) - 1)); ^ /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.14.sdk/usr/include/mach/i386/vm_param.h:161:43: note: expanded from macro 'MACH_VM_MAX_ADDRESS' #define MACH_VM_MAX_ADDRESS ((mach_vm_offset_t) VM_MAX_PAGE_ADDRESS) ```
Caio Lima
Comment 5
2019-06-06 01:28:47 PDT
Thx for the review!
WebKit Commit Bot
Comment 6
2019-06-06 01:58:10 PDT
Comment on
attachment 371444
[details]
Patch Clearing flags on attachment: 371444 Committed
r246146
: <
https://trac.webkit.org/changeset/246146
>
WebKit Commit Bot
Comment 7
2019-06-06 01:58:12 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8
2019-06-06 01:59:21 PDT
<
rdar://problem/51474999
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug