[JSCOnly] JSCOnly port is not building on macOS https://bugs.webkit.org/show_bug.cgi?id=198563

Reviewed by Don Olmstead.

We are adding `<mach/vm_types.h>` to fix build issues when compiling
JSCOnly port on macOS.

* wtf/WTFAssertions.cpp:


Canonical link: https://commits.webkit.org/212599@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246146 268f45cc-cd09-0410-ab3c-d52691b4dbfc