Source/WTF/wtf/WTFAssertions.cpp
@@ -32,6 +32,7 @@
 
 #if OS(DARWIN)
 #include <mach/vm_param.h>
+#include <mach/vm_types.h>
 #endif
 
 namespace WTF {
